# ratcliff

./: .dockerignore  .gitignore  Dockerfile  HF_SPACE_README.md  README.md  conftest.py  h100_section4.txt  pyproject.toml
.playwright-mcp/: page-2026-06-10T05-42-00-082Z.yml  page-2026-06-10T05-42-13-744Z.yml  page-2026-06-10T05-46-11-122Z.yml  page-2026-06-10T05-46-22-118Z.yml  page-2026-06-10T05-46-42-025Z.yml  page-2026-06-10T05-53-00-941Z.yml  page-2026-06-10T05-53-20-227Z.yml  page-2026-06-10T07-53-51-631Z.yml  page-2026-06-10T07-53-55-674Z.yml  page-2026-06-10T07-54-14-623Z.yml  page-2026-06-10T07-54-49-122Z.yml  page-2026-06-10T07-55-26-209Z.yml
backend/: __init__.py  byo_gpu.py  jobs.py  main.py  parsers.py
backend/tests/: test_jobs.py  test_main.py  test_parsers.py
cognitive_society/: README.md  __init__.py  adversary.py  agent.py  baselines.py  comms.py  demo.py  engine.py  experiment.py  ez_diffusion.py  phase2_experiment.py  phase2_per_victim.py  phase3_scale.py  phase3_tipping.py  rl.py  rl_experiment.py  society.py  swarm_experiment.py  swarm_metrics.py  topology.py
cognitive_society/tests/: test_agent.py  test_comms.py  test_engine.py  test_ez_diffusion.py  test_phase2.py  test_phase2_per_victim.py  test_rl.py  test_society.py  test_swarm.py  test_topology.py
data/: parinp  twod24data  twod3datanew
docs/notes/: 2026-06-04-cpu-perf-investigation.md  (+12 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
model_a/: fit.py  jax_port.py  objective.py  objective_smooth.py  simulate.py  simulate_smooth.py
model_b/: api.py  fit.py  grf.py  grf_kl.py  objective.py  simulate.py
reference/: README_benchtwod3  README_random_field  benchtwod3mpi.f.new_accum.f.THIS_ONE_WORKS  gpgsq5deg3twod24.f  twod24_jax.py
scripts/: _diag_kl_spectrum.py  h100_model_b_benchmark.py  h100_section4_verbose.py  h100_setup_and_run.sh  h100_smoke_timing.py  h100_stage6_kl_benchmark.py  sbi_mvp.py  smoke.ps1  smoke.sh
shared/: data_io.py  prng.py  validation.py
(+67 files in other folders)
