[project]
name = "ratcliff"
version = "0.1.0"
description = "JAX port of Ratcliff spatially-extended diffusion models"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.30,<0.12",
    "jaxlib>=0.4.30,<0.12",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]
fit = [
    "jaxopt>=0.8",
    "optax>=0.2",
]
viz = [
    "matplotlib>=3.8",
    "jupyter>=1.0",
]
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "model_a*", "model_b*", "backend*", "cognitive_society*"]

[tool.setuptools.package-data]
"*" = ["data/*"]

[tool.pytest.ini_options]
testpaths = ["shared/tests", "model_a/tests", "model_b/tests", "backend/tests", "cognitive_society/tests"]
addopts = "-v --tb=short --strict-markers -ra"
markers = [
    "perf: performance regression tests (skipped by default, run with -m perf)",
    "slow: slow integration tests (run with -m slow or include explicitly)",
]
